# obsidian-notes-watcher

./: -  .gitignore  CHANGELOG.md  CLAUDE.md  GOAL.md  LICENSE  PROGRESS.md  README.md  VERIFICATION_PLAN.md  action.yml  config.example.yml  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml  note-watcher.yml  publish.yml
GOALS/: 2026-03-06T14-55-09-GOAL.md
examples/github-action/: README.md  config.example.yml
examples/github-action/.github/workflows/: note-watcher.yml
note_watcher/: __init__.py  arcade_check.py  cli.py  config.py  debouncer.py  dispatcher.py  parser.py  result_validator.py  watcher.py  writer.py
note_watcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: authorize_arcade.py  com.notewatcher.daemon.plist  install.sh  uninstall.sh
tests/: conftest.py  test_arcade_check.py  test_cli.py  test_config.py  test_debouncer.py  test_dispatcher.py  test_integration.py  test_parser.py  test_result_validator.py  test_watcher.py  test_writer.py
